[package]
name = "portfolio"
version = "0.1.0"
authors = ["David Kwong <20544dk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.74"
rand = "0.8.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'WheelEvent',
  'MouseEvent',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
